Change Unnatural Expressions

--- a/settings.ini
+++ b/settings.ini
@@ -12,7 +12,7 @@ RestingWarriorY=387
 WarriorX=648
 WarriorY=108
 
-[Intervals]
+[Delay]
 BeforeClickingArea=0.2
 BeforeStartingPlanningParty=0.2
 BeforeClickingElementTab=0.2
